--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>geometry-2d</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>geometry-2d</title><link href=/static/css/app.e63076511c9d62495d90b4fadca93907.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.0f3d39e689d3aeb36b20.js></script><script type=text/javascript src=/static/js/vendor.601c96cca9defac4d2d6.js></script><script type=text/javascript src=/static/js/app.33e07afd3771e12f3e4a.js></script></body></html>
